modified services for DI, added details for quartz job, sql creation script

--- a/YouTubeAPI/appsettings.json
+++ b/YouTubeAPI/appsettings.json
@@ -7,5 +7,14 @@
     }
   },
   "AllowedHosts": "*",
-  "APIKeys":  "sdsdsd,sdsdsdsd,sdasdasd"
+  "YouTube": {
+    "Keys": "sdsdsd,sdsdsdsd,sdasdasd",
+    "SearchSize": 50,
+    "Delay": 15,
+    "CheckRecent" :  "true"
+  },
+  "QuartzYTJob": {
+    "cronExpression": "* * * * *"
+  }
 }
+
