added IDs for Dbentry, modified logic for retrieving results from DB, cron now taken from appsettings

--- a/YouTubeAPI/appsettings.json
+++ b/YouTubeAPI/appsettings.json
@@ -8,13 +8,13 @@
   },
   "AllowedHosts": "*",
   "YouTube": {
-    "Keys": "sdsdsd,sdsdsdsd,sdasdasd",
+    "Keys": "AIzaSyBZRDiASxyMs4oLi106dN8d1smB-eeVrMY",
     "SearchSize": 50,
     "Delay": 15,
-    "CheckRecent" :  "true"
+    "CheckRecent": "true"
   },
   "QuartzYTJob": {
-    "cronExpression": "* * * * *"
+    "cronExpression": "0/10 * * * * ?"
   }
 }
 
