--- a/YouTubeAPI/appsettings.json
+++ b/YouTubeAPI/appsettings.json
@@ -9,12 +9,13 @@
   "AllowedHosts": "*",
   "YouTube": {
     "Keys": "AIzaSyBZRDiASxyMs4oLi106dN8d1smB-eeVrMY",
-    "SearchSize": 50,
-    "Delay": 15,
-    "CheckRecent": "true"
+    "SearchSize": 10,
+    "Delay": 30,
+    "CheckRecent": "true",
+    "keywordToSearch": "cricket"
   },
   "QuartzYTJob": {
-    "cronExpression": "0/10 * * * * ?"
+    "cronExpression": "0/30 * * * * ?"
   }
 }
 
