swagger on non-dev enabled, api key spec changed

--- a/YouTubeAPI/appsettings.json
+++ b/YouTubeAPI/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "YouTube": {
-    "Keys": "AIzaSyBZRDiASxyMs4oLi106dN8d1smB-eeVrMY",
+    "Keys": "{API_KEY_HERE}",
     "SearchSize": 10,
     "Delay": 30,
     "CheckRecent": "true",
